<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/general">
        <menu>
            <item android:id="@+id/pg_noti"
                android:icon="@mipmap/ic_message_black_24dp"
                android:title="@string/notifiception" />

            <item android:id="@+id/pg_br"
                android:icon="@mipmap/ic_battery_unknown_black_24dp"
                android:title="@string/battery_reminder" />

            <item android:id="@+id/pg_tos"
                android:icon="@mipmap/ic_do_not_disturb_off_black_24dp"
                android:title="@string/turn_off_silent" />

            <item android:id="@+id/pg_police"
                android:icon="@mipmap/ic_contact_phone_black_24dp"
                android:title="@string/emergency_contacts" />
        </menu>
    </item>

    <item android:title="@string/support">
        <menu>
            <item android:id="@+id/pg_mail"
                android:icon="@mipmap/ic_contact_mail_black_24dp"
                android:title="@string/mail_us" />

            <item android:id="@+id/pg_about"
                android:icon="@mipmap/ic_person_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>
</menu>